--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sciencechat",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sciencefaithbbc.us/",
+  "homepage": "https://yongjinjiang.github.io/sciencechat",
   "dependencies": {
     "@babel/runtime": "^7.7.2",
     "axios": "^0.19.0",
